2004-08-05  Michèle Garoche  <michele.garoche@easyconnect.fr>
 
 	* cong-menus.c: 
 	
 	Added trailing ellipsis to Open and New File menu items
 
2004-08-04  Geert Stappers  <stappers@stappers.nl>

	*  plugin-docbook.c

	Added a title at creation time of a article.

2004-08-01  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-primary-window.c, cong-menus.c: 

	Ported the toolbar to the GtkAction API (a big internal simplification!)

	* xmledit.c, popup.c, cong-ui-hooks.h, cong-primary-window.h, cong-primary-window.c, cong-menus.c, cong-document.h: 

	Port of menus from GtkItemFactory to the GtkUIManager/GtkAction API

2004-07-30  David Malcolm  <dmalcolm@redhat.com>

	* cong-plugin.c (cong_ui_transform_doc): 

	Convert our list of stylesheet parameters into the form libxslt is expecting.  Not tested yet.

	* file.c: 

	Added an "All Files" filter to help with debugging

	* plugin-sgml.c, plugin-fo.c, plugin-dtd.c, plugin-docbook.c, plugin-convert-case.c, cong-service-importer.h, cong-service-importer.c, cong-service-exporter.h, cong-service-exporter.c, cong-plugin.c, cong-file-export.c:
	Added callbacks to create option widgets for exporters and importers; added dummy Paper size options for the PDF and XSL:FO exporters

2004-07-27  Jeff Martin  <jeff@custommonkey.org>

	* cong-spell.c, cong-spell.h, cong-util.h:

	Added basic spelling implmentation based on enchant

2004-07-27  Michele Garoche <michele.garoche@easyconnect.fr>

	* cong-document.c, cong-file-new.c:

	More strings to be translated.

2004-07-27  David Malcolm  <dmalcolm@redhat.com>

	* cong-plugin.c, cong-plugin.h, cong-util.c, global.h, plugin-docbook.c: 

	Added CongStylesheetParameter type and dummy code to handle this
	when exporting PDFs and XSL:FO files.

	* xmlload.c: 

	Removed contents of this file: dead code

2004-07-27  Geert Stappers  <stappers@stappers.nl>

	* cong-menus.c:

	Use cong_document_get_root_element(cong_doc); instead
	of cong_document_get_root(cong_doc); to get linked